examples/src/scss/style.scss
$header-bg-color: #3498db;
$header-bg-color-secondary: #2c3e50;
$section-headings-color: #3498db;
$rct-color: #444;
$rct-border-color: #ccc;
$input-border-color: #ced4da;
$tree-font-family: "Roboto", sans-serif;

@import "../../../src/scss/react-checkbox-tree";
@import "cayman";

.react-checkbox-tree {
  color: $rct-color;
  font-family: $tree-font-family;
}

.clickable-labels {
  display: flex;

  > * {
    width: 50%;
  }
}

.expand-all-container {
  max-width: 400px;
}

.rct-node-icon .far {
  width: 1em;
  text-align: center;
}

.filter-container > .filter-text {
  display: block;
  margin-bottom: .75rem;
  border: 1px solid $input-border-color;
  border-radius: .25rem;
  background-clip: padding-box;
  padding: .375rem .75rem;
  line-height: 1.5;
  font-size: 1rem;
}

